[package]
name = "btcpay-ws"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.log]
path = "log"

[dev-dependencies]
actix-rt = "2.2.0"
async-trait = "0.1.50"
tide-testing = "0.1.3"

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tide-websockets = "0.3.0"
hmac = "0.10.1"
colored = "2"
redis = { version = "0.19.0", features = ["async-std-tls-comp"] }
clap = "2.32.0"
sha2 = "0.9.8"
hex = "0.4.3"
async-trait = "0.1.50"
